@@ -1,3 +1,11 @@
+2007-01-21  Mark Wielaard  <mark@klomp.org>
+
+	* java/security/SecureClassLoader.java (defineClass): Method returns
+	Class<?>.
+	* java/security/SignatureSpi.java (engineUpdate(ByteBuffer):
+	Does not throw SignatureException. Chain SignatureException inside
+	IllegalStateException.
+
 2007-01-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* javax/management/NotificationBroadcasterSupport.java:
